alignment issues

--- a/advice-generator-app-main/style.css
+++ b/advice-generator-app-main/style.css
@@ -1,22 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;800&display=swap');
+
 body{
     background-color: hsl(218, 23%, 16%) ;
     font-family: 'Manrope';
-}
-.container{
-    background-color: hsl(217, 19%, 38%);
-    height: 80%;
-    width: 50%;
+    font-size: 28px;
+    min-height:100vh;
     display: flex;
     flex-direction: column;
     justify-content:center;
     align-items:center;
 }
+main {
+    margin:auto;
+    padding: 10px;
+    text-align:center;
+    
+}
+.container{
+    background-color: hsl(217, 19%, 38%);
+    max-width: 500px;
+    padding: 10px 10px 10px 10px;
+   border-radius :15px;
+   
+}
 #main1{
-   text-align: center;
+    font-weight:400 ;
+    font-size: 15px;
+    text-align: center;
     color: hsl(150, 100%, 66%);
 }
 #main2{
+    font-weight:800 ;
+    font-size: 30px;
     text-align: center;
     color: hsl(193, 38%, 86%);
+}
+#dice{
+    background-color: hsl(150, 100%, 66%);
+    border-radius: 50%;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    transform: translateY(95%);
+
+}
+.attribution {
+    color:aliceblue;
+    text-align: center;
+    font-size:15px;
 }
